--- a/src/main/java/com/premiumminds/wicket/demo/repeaters/AjaxListSetViewPanel.html
+++ b/src/main/java/com/premiumminds/wicket/demo/repeaters/AjaxListSetViewPanel.html
@@ -17,27 +17,9 @@
 	</p>
 
 	<hr />
-
-	<div>
-	<pre><code class="java">public HomePage(final PageParameters parameters) {
-	super(parameters);
-
-	//add(new Label("version", getApplication().getFrameworkSettings().getVersion()));
-
-	// TODO Add your page's components here
-
-}</code></pre>
-	</div>
 	
-	<p class="text-danger">As of v8.0, Safari exhibits a bug in which
-		resizing your browser horizontally causes rendering errors in the
-		justified nav that are cleared upon refreshing.</p>
-	<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus,
-		tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
-		massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-		euismod. Donec sed odio dui.</p>
 	<p>
-		<a class="btn btn-primary" href="#" role="button">View details
+		<a class="btn btn-primary" href="https://github.com/ajcamilo/pm-wicket-utils-demo/blob/master/src/main/java/com/premiumminds/wicket/demo/repeaters/AjaxListSetViewPanel.java" role="button">View source
 			&raquo;</a>
 	</p>
 	
