--- a/src/main/java/com/premiumminds/wicket/demo/repeaters/ListViewPanel.html
+++ b/src/main/java/com/premiumminds/wicket/demo/repeaters/ListViewPanel.html
@@ -15,6 +15,11 @@
 		<button class="btn btn-default" wicket:id="addTop">Add to top</button>
 		<button class="btn btn-default" wicket:id="addBottom">Add to bottom</button>
 	</p>
+	<hr />
+	<p>
+		<a class="btn btn-primary" href="https://github.com/ajcamilo/pm-wicket-utils-demo/blob/master/src/main/java/com/premiumminds/wicket/demo/repeaters/ListViewPanel.java" role="button">View source
+			&raquo;</a>
+	</p>
 	<script>
 		Wicket.Event.subscribe('/ajax/call/complete', 
 			function(jqEvent, attributes, jqXHR, errorThrown, textStatus) {
