--- a/src/main/java/com/premiumminds/wicket/demo/HomePage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/HomePage.html
@@ -10,14 +10,14 @@
 <title>pm-wicket-utils demo</title>
 
 <!-- Bootstrap core CSS -->
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-<link href="/css/justified-nav.css" rel="stylesheet">
+<link href="css/justified-nav.css" rel="stylesheet">
 
 <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-<!--[if lt IE 9]><script src="/js/ie8-responsive-file-warning.js"></script><![endif]-->
-<script src="/js/ie-emulation-modes-warning.js"></script>
+<!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
+<script src="js/ie-emulation-modes-warning.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
@@ -72,7 +72,7 @@
 
 
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<script src="/js/ie10-viewport-bug-workaround.js"></script>
+	<script src="js/ie10-viewport-bug-workaround.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
