bootstrap paginator demo

--- a/src/main/java/com/premiumminds/wicket/demo/TemplatePage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/TemplatePage.html
@@ -41,6 +41,7 @@
 				<ul class="nav nav-justified">
 					<li wicket:id="listSetView"><a href="#" wicket:id="link">AjaxListSetView</a></li>
 					<li wicket:id="drawer"><a href="#" wicket:id="link">Drawer</a></li>
+					<li wicket:id="bootstrapPaginator"><a href="#" wicket:id="link">BootstrapPaginator</a></li>
 				</ul>
 			</div>
 		</div>
