add links to source

--- a/src/main/java/com/premiumminds/wicket/demo/TemplatePage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/TemplatePage.html
@@ -50,7 +50,7 @@
 
 		<!-- Site footer -->
 		<footer class="footer">
-			<p>checkout the source on <a href="https://github.com/ajcamilo/pm-wicket-utils-demo">github</a></p>
+			<p class="text-right"><a href="https://github.com/ajcamilo/pm-wicket-utils-demo">checkout the project source</a></p>
 		</footer>
 
 	</div>
