--- a/src/main/java/com/premiumminds/wicket/demo/bootstrap/BootstrapPaginatorPage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/bootstrap/BootstrapPaginatorPage.html
@@ -118,9 +118,12 @@
 		</div>
   		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
-				<button type="submit" class="btn btn-default" wicket:id="submit">Update paginator</button>
+				<button type="submit" class="btn btn-primary" wicket:id="submit">Update paginator</button>
+				<a class="btn  btn-default" href="https://github.com/ajcamilo/pm-wicket-utils-demo/tree/master/src/main/java/com/premiumminds/wicket/demo/bootstrap" role="button">View source
+			&raquo;</a>
 			</div>
 		</div>
   	</form>
+
 
 </wicket:extend>
