--- a/src/main/java/com/premiumminds/wicket/demo/drawer/DrawerPage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/drawer/DrawerPage.html
@@ -8,8 +8,18 @@
 		</div>
 	</div>
 	
-	<a href="#" wicket:id="show">Open drawer 1</a>
-	
+	<div class="panel panel-default">
+		<div class="panel-heading">This will open the first drawer</div>
+		<div class="panel-body">
+			<a href="#" wicket:id="show">Open drawer 1</a>
+		</div>
+	</div>	
+
 	<div wicket:id="drawerManager"></div>
 
+
+	<p>
+		<a class="btn btn-primary" href="https://github.com/ajcamilo/pm-wicket-utils-demo/tree/master/src/main/java/com/premiumminds/wicket/demo/drawer" role="button">View source
+			&raquo;</a>
+	</p>
 </wicket:extend>
