--- a/src/main/java/com/premiumminds/wicket/demo/drawer/CustomDrawerExample.html
+++ b/src/main/java/com/premiumminds/wicket/demo/drawer/CustomDrawerExample.html
@@ -1,4 +1,8 @@
 <wicket:panel>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal-drawer" aria-label="Close"><span aria-hidden="true">×</span></button>
+		<h4 class="modal-title">Drawer title</h4>
+	</div>
 	<div class="modal-body">
 		<p>All state of open drawers is maintained on the server side. So you can refresh the page without losing state.</p>
 		<p>Every time a user tries to close the drawer, there's a request to the server-side, so you can disallow the operation. For example, when there's unsaved content</p> 
