--- a/src/main/java/com/premiumminds/wicket/demo/drawer/DrawerExample1.html
+++ b/src/main/java/com/premiumminds/wicket/demo/drawer/DrawerExample1.html
@@ -1,4 +1,8 @@
 <wicket:panel>
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal-drawer" aria-label="Close"><span aria-hidden="true">×</span></button>
+		<h4 class="modal-title">Drawer title</h4>
+	</div>
 	<div class="modal-body">
 		<p>This is an example of a drawer. You can open many instances of AbstractDrawer, for example:</p>
 		<br />
