change paginator options text

--- a/src/main/java/com/premiumminds/wicket/demo/bootstrap/BootstrapPaginatorPage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/bootstrap/BootstrapPaginatorPage.html
@@ -46,9 +46,45 @@
 		</div>
   		<div class="form-group">
 			<div class="col-sm-offset-2 col-sm-10">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" wicket:id="showFirstButton"> show goto first page button
+					</label>
+				</div>
+			</div>
+		</div>
+  		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" wicket:id="showLastButton"> show goto last page button
+					</label>
+				</div>
+			</div>
+		</div>
+  		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" wicket:id="showNextButton"> show goto next page button
+					</label>
+				</div>
+			</div>
+		</div>
+  		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<div class="checkbox">
+					<label>
+						<input type="checkbox" wicket:id="showPreviousButton"> show goto previous page button
+					</label>
+				</div>
+			</div>
+		</div>
+  		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
 	    		<div class="checkbox">
 					<label>
-						<input type="checkbox" wicket:id="hiddenFirstButton"> hide goto first page button should be hidden when it's not needed
+						<input type="checkbox" wicket:id="hiddenFirstButton"> hide goto first page button, when it's not needed
 					</label>
 				</div>
 			</div>
@@ -57,7 +93,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" wicket:id="hiddenLastButton"> hide goto last page button should be hidden when it's not needed
+						<input type="checkbox" wicket:id="hiddenLastButton"> hide goto last page button, when it's not needed
 					</label>
 				</div>
 			</div>
@@ -66,7 +102,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" wicket:id="hiddenNextButton"> hide goto next page button should be hidden when it's not needed
+						<input type="checkbox" wicket:id="hiddenNextButton"> hide goto next page button, when it's not needed
 					</label>
 				</div>
 			</div>
@@ -75,43 +111,7 @@
 			<div class="col-sm-offset-2 col-sm-10">
 				<div class="checkbox">
 					<label>
-						<input type="checkbox" wicket:id="hiddenPreviousButton"> hide goto previous page button should be hidden when it's not needed
-					</label>
-				</div>
-			</div>
-		</div>
-  		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" wicket:id="showFirstButton"> show the goto first page option
-					</label>
-				</div>
-			</div>
-		</div>
-  		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" wicket:id="showLastButton"> show the goto last page option
-					</label>
-				</div>
-			</div>
-		</div>
-  		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" wicket:id="showNextButton"> show the goto next page option
-					</label>
-				</div>
-			</div>
-		</div>
-  		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<div class="checkbox">
-					<label>
-						<input type="checkbox" wicket:id="showPreviousButton"> show the goto previous page option
+						<input type="checkbox" wicket:id="hiddenPreviousButton"> hide goto previous page button, when it's not needed
 					</label>
 				</div>
 			</div>
