--- a/src/main/java/com/premiumminds/wicket/demo/TemplatePage.html
+++ b/src/main/java/com/premiumminds/wicket/demo/TemplatePage.html
@@ -50,7 +50,7 @@
 
 		<!-- Site footer -->
 		<footer class="footer">
-			<p class="text-right"><a href="https://github.com/ajcamilo/pm-wicket-utils-demo">checkout the project source</a></p>
+			<p class="text-right">© 2014 <a href="http://www.premium-minds.com">Premium Minds</a> - All rights reserved</p>
 		</footer>
 
 	</div>
